2006-08-21  arjan <arjan at yirdis dot nl>

        * gaphor/diagram/usecase.py: drawing works

2006-07-27  arjan <arjan at yirdis dot nl>

        * Connect/disconnect works for comment-commentline
        * gaphor/diagram/tool.py: Handle tool in place
        * gaphor/diagram/interfaces.py: IConnect interface
        * gaphor/diagram/actor.py: works

2006-07-21  arjan <arjan at yirdis dot nl>

        * gaphor/diagram/comment.py: text editining working
        * gaphor/diagram/actor.py: draws

2006-07-19  arjan <arjan at yirdis dot nl>

	* gaphor/diagram/placementtool.py: works with Gaphas
	* gaphor/diagram/comment.py: can be placed on new canvas
	* gaphor/ui/*, gaphor/UML/*: use gaphas instead of diacanvas

2006-07-07  arjan <arjan at yirdis dot nl>

	* utils/coverage.py: new module for code coverage.
	* setup.py: added --coverage option ro the run command, allowing for
	code coverage output.

2006-06-07  arjan <arjan at yirdis dot nl>

        * Changed Canvas and View to Gaphas. Items should still be converted.
        In other words, the application does nothing from this point.

2006-06-06  arjan <arjan at yirdis dot nl>

	* Merged Stereotypes branch.

2006-06-01  arjan <arjan at yirdis dot nl>

        * some cleanup, added TODO: comments for conversion to Gaphas.

2006-05-29  arjan <arjan at yirdis dot nl>

	* setup.py: added languages Swedish and Catalan.

2006-05-23  arjan <arjan at yirdis dot nl>

        * gaphor/undomanager.py: disconnected from diacanvas.UndoManager
        * */*actions.py: use new undoable descriptior in stead of aspects

2006-05-18  arjan <arjan at yirdis dot nl>
	* po/es.po: updated by Jordi Vilalta Prat.
	* po/ca.po: Catalan translation thanks to Jordi Vilalta Prat.

2006-05-12  arjan <arjan at yirdis dot nl>
	* po/sv.po: new language file, thanks to Daniel Nylander.

2006-02-14  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/*.py: get rid of initialize_item function, use