@@ -4,6 +4,8 @@ Actor diagram item classes.
 
 from math import pi
 
+from gaphas.util import text_center, text_set_font
+
 from gaphor import UML
 #from gaphor.diagram.align import V_ALIGN_BOTTOM
 from gaphor.diagram.classifier import ClassifierItem
@@ -29,6 +31,7 @@ class ActorItem(ClassifierItem):
 #        'min_height' : (HEAD + NECK + BODY + ARM),
 #        'min_width'  : (ARM * 2)
 #    }
+    FONT = 'sans 10'
 
     def __init__(self, id=None):
         ClassifierItem.__init__(self, id)
@@ -43,7 +46,7 @@ class ActorItem(ClassifierItem):
     def draw_icon(self, context):
         """Actors use Icon style.
         """
-        c = context.cairo
+        cr = context.cairo
 
         head, neck, arm, body = self.HEAD, self.NECK, self.ARM, self.BODY
 
@@ -54,30 +57,31 @@ class ActorItem(ClassifierItem):
         y = (head / 2) * fy
         cy = head * fy
 
-        c.move_to(x + head * fy / 2.0, y)
-        c.arc(x, y, head * fy / 2.0, 0, 2*pi)
-        #c.stroke()
+        cr.move_to(x + head * fy / 2.0, y)
+        cr.arc(x, y, head * fy / 2.0, 0, 2*pi)
 
-        c.move_to(x, y + cy / 2)
-        c.line_to(arm * fx, (head + neck + body) * fy)
+        cr.move_to(x, y + cy / 2)
+        cr.line_to(arm * fx, (head + neck + body) * fy)
 
-        c.move_to(0, (head + neck) * fy)
-        c.line_to(arm * 2 * fx, (head + neck) * fy)
+        cr.move_to(0, (head + neck) * fy)
+        cr.line_to(arm * 2 * fx, (head + neck) * fy)
 
-        c.move_to(0, (head + neck + body + arm) * fy)
-        c.line_to(arm * fx, (head + neck + body) * fy)
-        c.line_to(arm * 2 * fx, (head + neck + body + arm) * fy)
-        c.stroke()
+        cr.move_to(0, (head + neck + body + arm) * fy)
+        cr.line_to(arm * fx, (head + neck + body) * fy)
+        cr.line_to(arm * 2 * fx, (head + neck + body + arm) * fy)
+        cr.stroke()
 
         # The item's boundings are not related to the size of the actors name
         # So the update is trivial:
         text = self.subject.name
         if text:
-            x_bear, y_bear, w, h, x_adv, y_adv = c.text_extents(text)
+            #text_set_font(cr, self.FONT)
+            x_bear, y_bear, w, h, x_adv, y_adv = cr.text_extents(text)
             x = 0.5 - (w / 2 + x_bear)
             y = 0.5 - (h + y_bear)
-            c.move_to(self.width / 2.0 + x, self.height + h * 1.5)
-            c.show_text(text)
+            cr.move_to(self.width / 2.0 + x, self.height + h * 1.5)
+            cr.show_text(text)
+            #text_center(cr, self.width, self.height, text)
 
 
 # vim:sw=4:et
