@@ -48,6 +48,7 @@ class ClassItem(ClassifierItem):
 
     def __init__(self, id=None):
         ClassifierItem.__init__(self, id)
+        self.drawing_style = self.DRAW_COMPARTMENT
         self._attributes = self.create_compartment('attributes')
         self._operations = self.create_compartment('operations')
 
